--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,271 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<?xml version="1.0"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>pom</packaging>
     <groupId>com.isoftstone</groupId>
     <artifactId>project-quality-management</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <support.basedir>${project.basedir}/src/support</support.basedir>
+        <guava.version>17.0</guava.version>
+        <junit.version>4.11</junit.version>
+        <mockito.version>1.10.8</mockito.version>
+        <jackson.version>1.4.0</jackson.version>
+        <slf4j.version>1.7.5</slf4j.version>
+        <logback.version>1.1.2</logback.version>
+        <servlet.version>3.0.1</servlet.version>
+        <jsp.version>2.2</jsp.version>
+        <log4j.version>1.2.16</log4j.version>
+        <commons.logging.version>1.1.1</commons.logging.version>
+        <framework.version>2.0.6.beta</framework.version>
+    </properties>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.fxtx</groupId>
+                <artifactId>fx-framework</artifactId>
+                <version>${framework.version}</version>
+            </dependency>
+            <dependency>
+                <artifactId>fx-framework-utils</artifactId>
+                <groupId>com.fxtx</groupId>
+                <version>${framework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fxtx</groupId>
+                <artifactId>fx-framework-web</artifactId>
+                <version>${framework.version}</version>
+            </dependency>
+            <!-- 测试相关jar包 -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-all</artifactId>
+                <version>${mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <!-- 日志相关jar包 -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jcl-over-slf4j</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>${servlet.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet.jsp</groupId>
+                <artifactId>jsp-api</artifactId>
+                <version>${jsp.version}</version>
+                <scope>provided</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+    <dependencies>
+        <!-- 测试相关jar包 -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- 日志相关jar包 -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>${commons.logging.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <!-- logging end -->
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
+    </dependencies>
+    <profiles>
+        <profile>
+            <id>test</id>
+            <properties>
+                <db-url>jdbc:mysql://bageer.imwork.net:33066/tbyg_mall_new?characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull</db-url>
+                <db-name>root</db-name>
+                <db-password>fxtx#@!</db-password>
+                <img-ctx>http://192.168.1.201:8136/manager/</img-ctx>
+                <web-site>http://192.168.1.201:8136/</web-site>
+                <remove-cache-data>http://bageer.imwork.net:8136/index/removeCacheIndexDate</remove-cache-data>
+                <alipay-notify-url>http://bageer.imwork.net:8136/aliapy/payBack</alipay-notify-url>
+                <alipay-return-url>http://bageer.imwork.net:8136/aliapy/payBack</alipay-return-url>
+                <alipay-return-url-pro>http://bageer.imwork.net:8136/aliapy/payBackForPro</alipay-return-url-pro>
+                <wap-alipay-notify-url>http://bageer.imwork.net:8136/web/aliapy/payBack</wap-alipay-notify-url>
+                <wap-alipay-return-url>http://bageer.imwork.net:8136/web/aliapy/payBack</wap-alipay-return-url>
+                <wap-scan-alipay-notify-url>http://bageer.imwork.net:8136/web/aliapy/notifyScanBack
+                </wap-scan-alipay-notify-url>
+                <wap-scan-alipay-return-url>http://bageer.imwork.net:8136/web/aliapy/scanPayBack
+                </wap-scan-alipay-return-url>
+                <sweep-back-url>http://bageer.imwork.net:8136/api/v1/yinLianPay/sweepPayBack</sweep-back-url>
+                <group-back-url>http://bageer.imwork.net:8136/api/v1/yinLianPay/groupPayBack</group-back-url>
+                <cpu-scan-wap-url>http://bageer.imwork.net:8136/yinlian/wapScanPayBack</cpu-scan-wap-url>
+                <wap-scan-wx-notify-url>http://bageer.imwork.net:8136/web/wx/doScanPayBack</wap-scan-wx-notify-url>
+                <log-level>DEBUG</log-level>
+                <cpu-front-url>http://bageer.imwork.net:8136/yinlian/frontPayBack</cpu-front-url>
+                <cpu-wap-url>http://bageer.imwork.net:8136/yinlian/wapPayBack</cpu-wap-url>
+                <cpu-back-url>http://bageer.imwork.net:8136/yinlian/payBack</cpu-back-url>
+                <cpu-sign-cert-path>/data/server/tomcat-tbyg/certs/tianbaocsPay.pfx</cpu-sign-cert-path>
+                <cpu-encrypt-cert-path>/data/server/tomcat-tbyg/certs/acp20151027.cer</cpu-encrypt-cert-path>
+                <cpu-sign-cert-pwd>bjfxtx</cpu-sign-cert-pwd>
+                <cpu-sign-cert-type>PKCS12</cpu-sign-cert-type>
+                <cpu-validate-cert-dir>/data/server/tomcat-tbyg/certs/</cpu-validate-cert-dir>
+                <wap-wx-redirect-url>http://bageer.imwork.net:8136/web/doWxLogin</wap-wx-redirect-url>
+                <wap-wx-notify-url>http://bager.imwork.net:8136/web/wx/doPayBack</wap-wx-notify-url>
+                <manage-upload-url>http://bager.imwork.net:8136/manager/manage/FileUpload/uploadImg.json
+                </manage-upload-url>
+            </properties>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <db-url>jdbc:mysql://101.200.190.48:3306/tbyg_mall?characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull</db-url>
+                <db-name>root</db-name>
+                <db-password>fx$%^!@#</db-password>
+                <img-ctx>http://www.tianbaocs.com/manager/</img-ctx>
+                <web-site>http://www.tianbaocs.com/</web-site>
+                <remove-cache-data>http://www.tianbaocs.com/index/removeCacheIndexDate</remove-cache-data>
+                <alipay-notify-url>http://www.tianbaocs.com/aliapy/payBack</alipay-notify-url>
+                <alipay-return-url>http://www.tianbaocs.com/aliapy/payBack</alipay-return-url>
+                <alipay-return-url-pro>http://www.tianbaocs.com/aliapy/payBackForPro</alipay-return-url-pro>
+                <wap-alipay-notify-url>http://www.tianbaocs.com/web/aliapy/payBack</wap-alipay-notify-url>
+                <wap-alipay-return-url>http://www.tianbaocs.com/web/aliapy/payBack</wap-alipay-return-url>
+                <wap-scan-alipay-notify-url>http://www.tianbaocs.com/web/aliapy/notifyScanBack
+                </wap-scan-alipay-notify-url>
+                <wap-scan-alipay-return-url>http://www.tianbaocs.com/web/aliapy/scanPayBack</wap-scan-alipay-return-url>
+                <sweep-back-url>http://www.tianbaocs.com/api/v1/yinLianPay/sweepPayBack</sweep-back-url>
+                <group-back-url>http://www.tianbaocs.com/api/v1/yinLianPay/groupPayBack</group-back-url>
+                <cpu-scan-wap-url>http://www.tianbaocs.com/yinlian/wapScanPayBack</cpu-scan-wap-url>
+                <wap-scan-wx-notify-url>http://www.tianbaocs.com/web/wx/doScanPayBack</wap-scan-wx-notify-url>
+                <log-level>ERROR</log-level>
+                <cpu-front-url>http://www.tianbaocs.com/yinlian/frontPayBack</cpu-front-url>
+                <cpu-front-url-pro>http://test.tianbaocs.com/yinlian/frontPayBackForPro</cpu-front-url-pro>
+                <cpu-wap-url>http://www.tianbaocs.com/yinlian/wapPayBack</cpu-wap-url>
+                <cpu-back-url>http://www.tianbaocs.com/api/v1/yinLianPay/YLPayBack</cpu-back-url>
+                <cpu-sign-cert-path>/data/server/tomcat-www/certs/tianbaocsPay.pfx</cpu-sign-cert-path>
+                <cpu-encrypt-cert-path>/data/server/tomcat-www/certs/acp20151027.cer</cpu-encrypt-cert-path>
+                <cpu-sign-cert-pwd>bjfxtx</cpu-sign-cert-pwd>
+                <cpu-sign-cert-type>PKCS12</cpu-sign-cert-type>
+                <cpu-validate-cert-dir>/data/server/tomcat-www/certs/</cpu-validate-cert-dir>
+                <wap-wx-redirect-url>http://www.tianbaocs.com/web/doWxLogin</wap-wx-redirect-url>
+                <wap-wx-notify-url>http://www.tianbaocs.com/web/wx/doPayBack</wap-wx-notify-url>
+                <manage-upload-url>http://www.tianbaocs.com/manager/manage/FileUpload/uploadImg.json</manage-upload-url>
+            </properties>
+        </profile>
+        <profile>
+            <id>localhost-dev</id>
+            <properties>
+                <db-url>jdbc:mysql://101.200.190.48:3306/tbyg_mall?characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull</db-url>
+                <db-name>root</db-name>
+                <db-password>fx$%^!@#</db-password>
+                <img-ctx>http://www.tianbaocs.com/manager/</img-ctx>
+                <web-site>http://www.tianbaocs.com/</web-site>
+                <remove-cache-data>http://www.tianbaocs.com/index/removeCacheIndexDate</remove-cache-data>
+                <alipay-notify-url>http://www.tianbaocs.com/aliapy/payBack</alipay-notify-url>
+                <alipay-return-url>http://www.tianbaocs.com/aliapy/payBack</alipay-return-url>
+                <alipay-return-url-pro>http://www.tianbaocs.com/aliapy/payBackForPro</alipay-return-url-pro>
+                <wap-alipay-notify-url>http://www.tianbaocs.com/web/aliapy/payBack</wap-alipay-notify-url>
+                <wap-alipay-return-url>http://www.tianbaocs.com/web/aliapy/payBack</wap-alipay-return-url>
+                <wap-scan-alipay-notify-url>http://www.tianbaocs.com/web/aliapy/notifyScanBack
+                </wap-scan-alipay-notify-url>
+                <wap-scan-alipay-return-url>http://www.tianbaocs.com/web/aliapy/scanPayBack</wap-scan-alipay-return-url>
+                <sweep-back-url>http://www.tianbaocs.com/api/v1/yinLianPay/sweepPayBack</sweep-back-url>
+                <group-back-url>http://www.tianbaocs.com/api/v1/yinLianPay/groupPayBack</group-back-url>
+                <cpu-scan-wap-url>http://www.tianbaocs.com/yinlian/wapScanPayBack</cpu-scan-wap-url>
+                <wap-scan-wx-notify-url>http://www.tianbaocs.com/web/wx/doScanPayBack</wap-scan-wx-notify-url>
+                <log-level>DEBUG</log-level>
+                <cpu-front-url>http://www.tianbaocs.com/yinlian/frontPayBack</cpu-front-url>
+                <cpu-wap-url>http://www.tianbaocs.com/yinlian/wapPayBack</cpu-wap-url>
+                <cpu-back-url>http://www.tianbaocs.com/yinlian/payBack</cpu-back-url>
+                <cpu-sign-cert-path>/data/server/tomcat-www/certs/tianbaocsPay.pfx</cpu-sign-cert-path>
+                <cpu-encrypt-cert-path>/data/server/tomcat-www/certs/acp20151027.cer</cpu-encrypt-cert-path>
+                <cpu-sign-cert-pwd>bjfxtx</cpu-sign-cert-pwd>
+                <cpu-sign-cert-type>PKCS12</cpu-sign-cert-type>
+                <cpu-validate-cert-dir>/data/server/tomcat-www/certs/</cpu-validate-cert-dir>
+                <wap-wx-redirect-url>http://www.tianbaocs.com/web/doWxLogin</wap-wx-redirect-url>
+                <wap-wx-notify-url>http://www.tianbaocs.com/web/wx/doPayBack</wap-wx-notify-url>
+                <manage-upload-url>http://www.tianbaocs.com/manager/manage/FileUpload/uploadImg.json</manage-upload-url>
+            </properties>
+        </profile>
+    </profiles>
+
+    <modules>
+        <module>project-quality-management-api</module>
+        <module>project-quality-management-mapper</module>
+        <module>project-quality-management-model</module>
+        <module>project-quality-management-service</module>
+        <module>project-quality-management-task</module>
+        <module>project-quality-management-web</module>
+    </modules>
 </project>
