--- a/project-quality-management-webapp/src/main/resources/application.properties
+++ b/project-quality-management-webapp/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #  指定活动的Profile
 # 开发环境
 spring.profiles.active=dev
-# 生产环境
-#spring.profiles.active=prod
+# 测试环境
+#spring.profiles.active=test
 
 
 # 设置Debug模式
