--- a/project-quality-management-webapp/src/main/resources/application-dev.properties
+++ b/project-quality-management-webapp/src/main/resources/application-dev.properties
@@ -8,3 +8,21 @@ server.context-path=/
 #logging.file = D:/logs/wechat.log
 # 配置日志级别，格式为：logging.level.包名=级别
 logging.level.org.springframework.web = DEBUG
+
+
+
+# DATASOURCE
+spring.datasource.url = jdbc:mysql://localhost:3306/pqm?useUnicode=true&amp;characterEncoding=utf8&amp;zeroDateTimeBehavior=convertToNull
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.datasource.max-active=100
+spring.datasource.max-idle=8
+spring.datasource.min-idle=8
+spring.datasource.initial-size=10
+
+
+# MyBatis
+mybatis.typeAliasesPackage: com.isoftstone.pqm.orm.pojo
+mybatis.mapperLocations: classpath*:/mapper/*.xml
+mybatis.configLocation: classpath:/mybatis-config.xml
